--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 ###### Requirements without Version Specifiers ######
 sqlite3
-csv
-pycairo
-PyGObject
 pillow
 pylab
+tkinter
 ###### Requirements with Version Specifiers ######
 bluepy==1.3.0
 pycrypto==2.6.1
